--- a/recent-posts.html
+++ b/recent-posts.html
@@ -11,7 +11,7 @@
 <body>
     <header>
       <div class="nav-one">
-      <h1>Living the Social Life</h1>
+      <h1>Living the social Life</h1>
       <p class="under-title">A blog exploring minimalism in life</p> 
       </div>
       <div class="nav-two">
